refactor: entities haven't count of entity, now ReSpawnActions count all entity. Create FactoryController, which create specific factory. Create OutputActions. Split initActions and turnActions